Properly call .setParent() on malilib config screens, allowing them to be closed to the modmenu menu again.
Otherwise, they just close to the main menu, and you need to reopen modmenu.